Update notes